fable/test/valid/unused_arg_implicit_none.f
      subroutine sub(num)
      implicit none
      integer num
      end

      program prog
      call sub(1)
      end
