fable/test/semantic_error/parameter_in_sub_args.f
      subroutine sub(num)
      parameter(num=0)
      end
